    * fixes/additions by Johann Schoonees:
    * fixed format7 capture setup function missing some parameters 
    * fixed compil warning in dc1394_absolute.c, line 261.
    * fixed harmless but misleading bug in dc1394_format7.c: line 802 should be removed.
    * add functions dc1394_get_one_shot and dc1394_get_multi_shot.
    * changed dc1394_get_camera_misc_info to avoid probing memory psec registers
      if no user memory is available. This is necessary for the iSight camera from Apple,
      which does not implement registers 0x618h thru 0x62Ch.
	
2003-12-04 Damien <ddouxchamps@users.sf.net>
    * little tag commit for version 0.9.2
	
2003-12-15 Damien <ddouxchamps@users.sf.net>
    * fixed significant bug regarding IIDC specs revision detection
      (in dc1394_get_sw_revision).
	
2003-12-17 Damien <ddouxchamps@users.sf.net>
    * temporary fix for bpp settings in dc1394_format7_basic_setup
	
2003-12-24 Damien <ddouxchamps@users.sf.net>
    * updated the IOCTLs for kernels 2.4.21+ and 2.6.0+. This breaks compatibility with
      previous kernel versions.

2004-01-04 Dan Dennedy <dan@dennedy.org>
    * simplify video1394 includes and correct Damien's ChangLog entry about kernel 2.4
      compatibility.
    * examples/dc1394_vloopback.c: minor bugfixes.
    * autogen.sh: add missing libtoolize.
	
2004-01-14 Damien <ddouxchamps@users.sf.net>
    * fixed a bug related to IIDC version in format7 functions. All registers specific 
      of v1.30 are now only probed if the version is 1.30.

2004-01-14 Dan Dennedy <dan@dennedy.org>
    * libdc1394/ieee1394-ioctl.h: removed unnecessary
    * examples/dc1394_vloopback: added support for palettes yuv422p and yuv420p,
      added support for scaling up to 1024x768, greater v4l application compatibility.

2004-01-15 Damien <ddouxchamps@users.sf.net>
    * little additional fix regarding F7 and version issues.
	
2004-01-17 Damien <ddouxchamps@users.sf.net>
    * f7 csr caching by T.Evers