@@ -37,7 +37,6 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-#include <stdlib.h>
 #include <string.h>
 #include <netinet/in.h>
 #include <unistd.h>
