@@ -381,3 +381,7 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
 	
 2004-01-17 Damien <ddouxchamps@users.sf.net>
     * f7 csr caching by T.Evers
+
+2004-01-19 Dan Dennedy <dan@dennedy.org>
+    * dc1394_control.h: added dc1394_free_camera_nodes
+    * updated examples to call dc1394_free_camera_nodes
